theme: fix card visibility concerns depending on theme

--- a/themes/pcsx2/assets/sass/_cards.sass
+++ b/themes/pcsx2/assets/sass/_cards.sass
@@ -28,6 +28,16 @@
   max-height: 250px
   width: unset
 
+.card-title
+  color: var(--heading-color)
+  &.above-img
+    color: var(--card-title-above-img)
+
+.card-summary
+  color: var(--heading-color)
+  &.above-img
+    color: var(--card-title-above-img)
+
 .post-preview
   height: 100%
   min-height: 15em
