--- a/themes/pcsx2/assets/sass/_theme-dark.sass
+++ b/themes/pcsx2/assets/sass/_theme-dark.sass
@@ -3,6 +3,7 @@
   --secondary-bg-color: #242629
   --tertiary-bg-color: #0b0b0d
   --heading-color: #fffffe
+  --heading-color-white: #fffffe
   --text-color: #94a1b2
   --primary-color: #51368D // #7f5af0;
   --polygon-color-a: #262558;
@@ -12,3 +13,4 @@
   --error-color: #f25042
   --theme-toggle-bg: #242629
   --theme-toggle-ball: #94a1b2
+  --card-title-above-img: #fffffe
